# er-generate-model

./: .coverage  .cursorrules  .gitignore  ANTLR_IMPLEMENTATION_SUMMARY.md  CHANGELOG.md  COLUMN_COMMENTS_FEATURE.md  COVERAGE_REPORT.md  DESIGN_ISSUES.md  DJANGO_INTEGRATION_SUMMARY.md  MIGRATION_COMPLETE.md  PROJECT_STRUCTURE.md  README.md  pyproject.toml  verify_structure.bat  verify_structure.sh
.kiro/specs/er-migrations/: FINAL-SUMMARY.md  PROGRESS.md  TDD-SUMMARY.md  design.md  migration-format-example.yaml  requirements.md  tasks.md  test-scenarios.md
.migrations/blog/: 0001_initial.yaml  0002_add_foreign_key.yaml  0003_add_foreign_key.yaml
docs/: ANTLR_PARSER.md  ER_AI_USAGE.md  ER_DJANGO_GUIDE.md  TOML_FORMAT.md
examples/: DATA_TYPES.md  README.md  all_data_types.mmd  blog_v1.mmd  blog_v2.mmd  blog_v3.mmd  blog_v4.mmd  blog_v5.mmd  blog_v6.mmd  blog_v7.mmd  blog_v8.mmd  er_ai_example.py  file_upload_models.mmd  file_upload_models.py
examples/django_blog/: .gitignore  QUICKSTART.md  README.md  test_er_django.bat  test_er_django.sh  test_export_formats.bat  test_export_formats.sh
examples/django_blog/blog/: admin.py  models.py
examples/django_blog/custom_output/: users_er.mmd
examples/django_blog/django_blog/: __init__.py  settings.py  urls.py  wsgi.py
examples/django_blog/products/: apps.py  models.py
examples/django_blog/users/: models.py
examples/models/: __init__.py  conversation_session_model.py  file_processing_result_model.py  file_processing_task_model.py  file_type_model.py  uploaded_file_model.py  user.py
src/x007007007/er/: __init__.py  base.py  cli.py  converters.py  db_parser.py  models.py  parsers.py  plantuml_parser.py  renderers.py  type_mapper.py  version.py
src/x007007007/er_ai/: __init__.py  cli.py  modeler.py  prompts.py  sdk.py  validator.py
src/x007007007/er_mcp/: __init__.py  cli.py  server.py
src/x007007007/er_migrate/: README.md  __init__.py  cli.py  converter.py  differ.py  file_manager.py  generator.py  models.py
tests/: test_antlr_parser.py  test_cli.py  test_cli_extended.py  test_column_comments.py  test_converters.py  test_er.py  test_er_ai.py  test_er_ai_validator.py  test_er_django.py  test_er_mcp.py  test_er_mcp_cli.py  test_er_mcp_server_extended.py  test_toml_inheritance_output.py  test_toml_parser.py  test_type_mapper_extended.py
tests/assets/: complex.mermaid  complex.puml
tests/assets/cli_django/: input.mermaid  sqlalchemy.py
tests/assets/cli_sqlalchemy/: django.py
tests/assets/column_with_comment/: input.mermaid
tests/assets/column_without_type/: input.mermaid
tests/assets/complex/: django.py  input.mermaid  input.puml  sqlalchemy.py
tests/assets/complex_toml/: input.toml
tests/assets/convert_mermaid_to_plantuml/: input.mermaid  output.puml
tests/assets/convert_plantuml_to_mermaid/: input.puml  output.mermaid
tests/assets/malformed_entity/: input.mermaid
tests/assets/mermaid_sample/: django.py  input.mermaid  sqlalchemy.py
tests/assets/plantuml_class/: input.puml
tests/assets/plantuml_enum/: input.puml
tests/assets/plantuml_fk/: input.puml
tests/assets/plantuml_sample/: input.puml
tests/assets/relationship_types/: input.mermaid
tests/assets/renderer_empty/: sqlalchemy.py
tests/assets/renderer_no_columns/: django.py  sqlalchemy.py
tests/assets/round_trip_mermaid/: input.mermaid  output.mermaid
tests/assets/round_trip_plantuml/: input.puml  output.puml
tests/assets/toml_basic/: input.toml
tests/assets/toml_django_inheritance_without_export_path/: input.toml
tests/assets/toml_django_multiple_inheritance/: input.toml
tests/assets/toml_django_no_inheritance/: input.toml
tests/assets/toml_django_single_inheritance/: input.toml
tests/assets/toml_field_override/: input.toml
tests/assets/toml_invalid_template/: input.toml
tests/test_er_migrate/: __init__.py  test_bugfixes.py  test_cli.py  test_converter.py  test_differ.py  test_e2e.py  test_file_manager.py  test_generator.py  test_models.py  test_state_rebuild.py
tools/: generate_antlr.bat  generate_antlr.sh  generate_converter_outputs.py  generate_test_outputs.py
(+29 files in other folders)
